chore: install dev deps for downloading models during e2e workflows

--- a/.github/workflows/e2e-whisper.yaml
+++ b/.github/workflows/e2e-whisper.yaml
@@ -69,6 +69,8 @@ jobs:
 
         - name: Setup LFAI-API and Supabase
           uses: ./.github/actions/lfai-core
+          with:
+            additionalOptionalDep: "dev-whisper"
 
         ##########
         # whisper
