--- a/.github/workflows/e2e-vllm.yaml
+++ b/.github/workflows/e2e-vllm.yaml
@@ -69,6 +69,7 @@ jobs:
           run: |
             python -m pip install "."
             python -m pip install -U "huggingface_hub[cli,hf_transfer]"
+            python -m pip install confz
 
         - name: Setup UDS Environment
           uses: defenseunicorns/uds-common/.github/actions/setup@05f42bb3117b66ebef8c72ae050b34bce19385f5
