add keycloak env vars 3

--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -51,7 +51,10 @@ spec:
             - name: SUPABASE_AUTH_EXTERNAL_KEYCLOAK_URL
               value: "https://sso.{{ .Values.package.domain }}/realms/uds"
             - name: SUPABASE_AUTH_KEYCLOAK_CLIENT_ID
-              value: {{ .Values.package.sso.clientId }}
+              valueFrom:
+                secretKeyRef:
+                  name: sso-client-uds-supabase
+                  key: clientId
             - name: SUPABASE_AUTH_KEYCLOAK_SECRET
               valueFrom:
                 secretKeyRef:
