remove debug and fix secret key ref

--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -58,7 +58,7 @@ spec:
             - name: SUPABASE_AUTH_KEYCLOAK_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: supabase-bootstrap-jwt
+                  name: sso-client-uds-supabase
                   key: secret
           resources:
             requests:
