chore: make python test dependencies optional (#815)
* Adds an optional [dev] dependency flag to the root pyproject.toml for test dependencies

--- a/src/leapfrogai_api/Makefile
+++ b/src/leapfrogai_api/Makefile
@@ -10,6 +10,7 @@ install-api:
 	python -m pip install ../../src/leapfrogai_sdk
 	@cd ${MAKEFILE_DIR} && \
 	python -m pip install -e .
+	python -m pip install "../../.[dev]"
 
 dev-run-api:
 	@cd ${MAKEFILE_DIR} && \
