chore: use custom actions to make workflows more DRY

--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -57,14 +57,6 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-        - name: Setup Python
-          uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c #v5.0.0
-          with:
-            python-version-file: 'pyproject.toml'
-
-        - name: Install Python Deps
-          run: python -m pip install ".[dev]"
-
         - name: Setup Node
           uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
           with:
@@ -75,46 +67,22 @@ jobs:
             npm --prefix src/leapfrogai_ui ci
             npx --prefix src/leapfrogai_ui playwright install
 
-        - name: Setup UDS Environment
-          uses: defenseunicorns/uds-common/.github/actions/setup@05f42bb3117b66ebef8c72ae050b34bce19385f5
+        - name: Setup Python
+          uses: ./.github/actions/python
+
+        - name: Setup UDS Cluster
+          uses: ./.github/actions/uds-cluster
           with:
-            username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
-            password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
+            registry1Username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
+            registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
 
-        - name: Create UDS Cluster
-          run: |
-            uds deploy k3d-core-slim-dev:0.22.2 --confirm
-
-        ##########
-        # Supabase
-        ##########
-        - name: Deploy Supabase
-          run: |
-            make build-supabase LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf tools kubectl create namespace leapfrogai
-            uds zarf package deploy packages/supabase/zarf-package-supabase-amd64-e2e-test.tar.zst --confirm
-            rm packages/supabase/zarf-package-supabase-amd64-e2e-test.tar.zst
-
-        - name: Set environment variable
-          id: set-env-var
-          run: |
-            echo "ANON_KEY=$(uds zarf tools kubectl get secret supabase-bootstrap-jwt -n leapfrogai -o jsonpath='{.data.anon-key}' | base64 -d)" >> "$GITHUB_ENV"
+        - name: Setup LFAI-API and Supabase
+          uses: ./.github/actions/lfai-core
 
         - name: Test Supabase
           run: |
             python -m pip install requests
             python -m pytest ./tests/e2e/test_supabase.py -v
-
-        ##########
-        # API
-        ##########
-        - name: Deploy LFAI-API
-          run: |
-            make build-api LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/api/zarf-package-leapfrogai-api-amd64-e2e-test.tar.zst --confirm
-            rm packages/api/zarf-package-leapfrogai-api-amd64-e2e-test.tar.zst
 
         - name: Test API
           run: |
