cascade TRUST_REMOTE_CODE to env and readme

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -112,10 +112,12 @@ USER nonroot
 
 WORKDIR /home/leapfrogai
 
+# copy-in SDK from sdk stagem model and vllm source code from builder
 COPY --from=sdk --chown=nonroot:nonroot /leapfrogai/${SDK_DEST} ./${SDK_DEST}
 COPY --from=builder --chown=nonroot:nonroot /home/leapfrogai/.venv /home/leapfrogai/.venv
 COPY --from=builder --chown=nonroot:nonroot /home/leapfrogai/packages/vllm/src /home/leapfrogai/packages/vllm/src
 COPY --from=builder --chown=nonroot:nonroot /home/leapfrogai/.model /home/leapfrogai/.model
+# copy-in python binaries
 COPY --from=builder --chown=nonroot:nonroot /home/nonroot/.pyenv/versions/3.11.6/ /home/nonroot/.pyenv/versions/3.11.6/
 
 # load ARG values into env variables for pickup by confz
