--- a/packages/vllm/.env.example
+++ b/packages/vllm/.env.example
@@ -3,6 +3,7 @@ export LAI_REPO_ID="TheBloke/Synthia-7B-v2.0-GPTQ"
 export LAI_REVISION="gptq-4bit-32g-actorder_True"
 export LAI_QUANTIZATION="gptq"
 export LAI_TENSOR_PARALLEL_SIZE=1
+export LAI_TRUST_REMOTE_CODE=True
 export LAI_MODEL_SOURCE=".model/"
 export LAI_MAX_CONTEXT_LENGTH=32768
 export LAI_STOP_TOKENS='["</s>","<|endoftext|>","<|im_end|>"]'
