more configurable perofrmance settings

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -100,7 +100,11 @@ ARG TRUST_REMOTE_CODE="True" \
     PROMPT_FORMAT_CHAT_ASSISTANT="<|assistant|>\n{}<|end|>\n" \
     PROMPT_FORMAT_DEFAULTS_TOP_P=1.0 \
     PROMPT_FORMAT_DEFAULTS_TOP_K=0 \
-    TENSOR_PARALLEL_SIZE=1
+    TENSOR_PARALLEL_SIZE=1 \
+    ENFORCE_EAGER=True \
+    GPU_MEMORY_UTILIZATION=0.99 \
+    WORKER_USE_RAY=False \
+    ENGINE_USE_RAY=False
 
 # setup nonroot user and permissions
 USER root
@@ -129,7 +133,11 @@ ENV LAI_TRUST_REMOTE_CODE=${TRUST_REMOTE_CODE} \
     LAI_PROMPT_FORMAT_CHAT_ASSISTANT=${PROMPT_FORMAT_CHAT_ASSISTANT} \
     LAI_PROMPT_FORMAT_DEFAULTS_TOP_P=${PROMPT_FORMAT_DEFAULTS_TOP_P} \
     LAI_PROMPT_FORMAT_DEFAULTS_TOP_K=${PROMPT_FORMAT_DEFAULTS_TOP_K} \
-    LAI_TENSOR_PARALLEL_SIZE=${TENSOR_PARALLEL_SIZE}
+    LAI_TENSOR_PARALLEL_SIZE=${TENSOR_PARALLEL_SIZE} \
+    LAI_ENFORCE_EAGER=${ENFORCE_EAGER} \
+    LAI_GPU_MEMORY_UTILIZATION=${GPU_MEMORY_UTILIZATION} \
+    LAI_WORKER_USE_RAY=${WORKER_USE_RAY} \
+    LAI_ENGINE_USE_RAY=${ENGINE_USE_RAY}
 
 ENV PATH="/home/leapfrogai/.venv/bin:$PATH"
 
