--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [  # Dev dependencies needed for all of lfai
 requires-python = "~=3.11"
 
 [project.optional-dependencies]
-dev = ["locust", "pytest-asyncio", "requests-toolbelt", "pytest"]
+dev = ["locust", "pytest-asyncio", "requests", "requests-toolbelt", "pytest"]
 
 [tool.pip-tools]
 generate-hashes = true
