--- a/.github/actions/python/action.yaml
+++ b/.github/actions/python/action.yaml
@@ -2,7 +2,7 @@ name: setup-python
 description: "Setup Python and library dependencies"
 
 inputs:
-  additionalOptionalDep: 
+  additionalOptionalDep:
     description: "Additional optional dependencies to install"
 
 runs:
@@ -18,6 +18,6 @@ runs:
       run: python -m pip install ".[dev]"
 
     - name: Install additionalDeps
-      if: ${{ steps.additionalDeps.outputs.additionalDeps != '' }}
+      if: ${{ inputs.additionalOptionalDep != '' }}
       shell: bash
       run: python -m pip install ".[${{ inputs.additionalOptionalDep }}]"
