--- a/packages/whisper/pyproject.toml
+++ b/packages/whisper/pyproject.toml
@@ -9,6 +9,7 @@ version = "0.9.2"
 dependencies = [
     "faster-whisper == 1.0.3",
     "leapfrogai-sdk",
+    "openai-whisper == 20231117",
 ]
 requires-python = "~=3.11"
 readme = "README.md"
