--- a/packages/vllm/.env.example
+++ b/packages/vllm/.env.example
@@ -1,18 +1,17 @@
 export LAI_HF_HUB_ENABLE_HF_TRANSFER="1"
-export LAI_REPO_ID="justinthelaw/Phi-3-mini-128k-instruct-4bit-128g"
+export LAI_REPO_ID="neuralmagic/Phi-3-mini-128k-instruct-quantized.w8a8"
 export LAI_REVISION="main"
-export LAI_QUANTIZATION="gptq"
 export LAI_TENSOR_PARALLEL_SIZE=1
 export LAI_TRUST_REMOTE_CODE=True
 export LAI_MODEL_SOURCE=".model/"
-export LAI_MAX_CONTEXT_LENGTH=131072
+export LAI_MAX_CONTEXT_LENGTH=65536
 export LAI_STOP_TOKENS='["</s>"]'
 export LAI_PROMPT_FORMAT_CHAT_SYSTEM="<|system|>\n{}<|end|>\n"
 export LAI_PROMPT_FORMAT_CHAT_USER="<|user|>\n{}<|end|>\n"
 export LAI_PROMPT_FORMAT_CHAT_ASSISTANT="<|assistant|>\n{}<|end|>\n"
 export LAI_PROMPT_FORMAT_DEFAULTS_TOP_P=1.0
 export LAI_PROMPT_FORMAT_DEFAULTS_TOP_K=0
-export LAI_ENFORCE_EAGER=True
-export LAI_GPU_MEMORY_UTILIZATION=0.99
-export LAI_WORKER_USE_RAY=False
-export LAI_ENGINE_USE_RAY=False
+export LAI_ENFORCE_EAGER=False
+export LAI_GPU_MEMORY_UTILIZATION=0.90
+export LAI_WORKER_USE_RAY=True
+export LAI_ENGINE_USE_RAY=True
