--- a/packages/vllm/.env.example
+++ b/packages/vllm/.env.example
@@ -1,5 +1,5 @@
 export LAI_HF_HUB_ENABLE_HF_TRANSFER="1"
-export LAI_REPO_ID="neuralmagic/Phi-3-mini-128k-instruct-quantized.w8a8"
+export LAI_REPO_ID="justinthelaw/Phi-3-mini-128k-instruct-4bit-128g"
 export LAI_REVISION="main"
 export LAI_TENSOR_PARALLEL_SIZE=1
 export LAI_TRUST_REMOTE_CODE=True
