--- a/packages/vllm/vllm-values.yaml
+++ b/packages/vllm/vllm-values.yaml
@@ -5,6 +5,6 @@ gpu:
   runtimeClassName: nvidia
 
 persistence:
-  size: 15Gi
-  accessModes: ReadWriteOnce
-  storageClass: "local-path"
+  size: ###ZARF_VAR_PVC_SIZE###
+  accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
+  storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
