--- a/packages/text-embeddings/embedding-values.yaml
+++ b/packages/text-embeddings/embedding-values.yaml
@@ -9,6 +9,6 @@ resources:
     nvidia.com/gpu: ###ZARF_VAR_GPU_LIMIT###
 
 persistence:
-  size: 15Gi
-  accessModes: ReadWriteOnce
-  storageClass: "local-path"
+  size: ###ZARF_VAR_PVC_SIZE###
+  accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
+  storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
